kubernetes/apps/paperless/paperless-ngx/app/deployment.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/apps/deployment_v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless
      app.kubernetes.io/instance: paperless
      app.kubernetes.io/controller: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless
        app.kubernetes.io/instance: paperless
        app.kubernetes.io/controller: paperless
    spec:
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 2000m
              memory: 1000Mi
            limits:
              cpu: 6000m
              memory: 4000Mi
          securityContext:
            privileged: true
          volumeMounts:
            - name: synology
              mountPath: /usr/src/paperless/data
              subPath: data
            - name: synology
              mountPath: /usr/src/paperless/media
              subPath: media
            - name: synology
              mountPath: /usr/src/paperless/export
              subPath: export
            - name: synology
              mountPath: /usr/src/paperless/consume
              subPath: consume
      volumes:
        - name: synology
          persistentVolumeClaim:
            claimName: synology
