kubernetes/apps/paperless/paperless-ngx/app/service.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/core/service_v1.json
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/instance: paperless
    app.kubernetes.io/controller: paperless
